[gd_scene load_steps=4 format=2]

[ext_resource path="res://GUI.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://sprite/background.jpg" type="Texture" id=3]

[node name="Main" type="CenterContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -683.0
margin_top = -400.0
margin_right = 683.0
margin_bottom = 400.0
size_flags_horizontal = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_top = 16.0
margin_right = 1366.0
margin_bottom = 784.0
texture = ExtResource( 3 )

[node name="GUI" parent="." instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 500.0
margin_top = 182.0
margin_right = 865.0
margin_bottom = 617.0

[node name="Ticker" type="Timer" parent="."]

[node name="RightTimer" type="Timer" parent="."]

[node name="LeftTimer" type="Timer" parent="."]
[connection signal="timeout" from="Ticker" to="." method="_on_Ticker_timeout"]
[connection signal="timeout" from="RightTimer" to="." method="_on_RightTimer_timeout"]
[connection signal="timeout" from="LeftTimer" to="." method="_on_LeftTimer_timeout"]
